--- a/FrontEnd/challet/index.html
+++ b/FrontEnd/challet/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
 
+    <script>
+      const global = globalThis;
+    </script>
     <!-- Favicon for browsers -->
     <link
       rel="icon"
